@@ -4,6 +4,7 @@ Changes in 1.1:
 - Move UPnP library from ktorrent/libktupnp to libktorrent
 - Add support for superseeding (171661)
 - Add command line example ktcli showing how to use libktorrent
+- Add TransportProtocol field to Peer::Stats
 
 Changes in 1.0.2:
 - Fix subtle bug causing some connections to be dropped prematurely
